--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,3 +1,4 @@
 {
-    "ApiUrl": "http://localhost:10004"
+    "ApiUrl": "https://testutilityapi.kyxplatform.com",
+    "ApiUrlLocal": "http://localhost:10000"
 }
