--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "license": "https://themeforest.net/licenses/terms/regular",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --open",
+        "start": "export NODE_OPTIONS=--openssl-legacy-provider; ng serve --open",
         "start:mem": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng serve --open",
         "build": "ng build",
         "build:prod": "ng build --prod",
